--- a/ContosoPizza/Pages/OrderDetails/Create.cshtml
+++ b/ContosoPizza/Pages/OrderDetails/Create.cshtml
@@ -328,7 +328,7 @@
                 }
                 @if (@Model.Order.OrderStatus.StatusName == "Making")
                 {
-                    <p style="color:red; font-weight:bold">Your order is making. Contact us if there is any problem.</p>
+                    <p style="color:red; font-weight:bold">Your order is being made. Contact us if there is any problem.</p>
                 }
                 else if (@Model.Order.OrderStatus.StatusName == "Delivering")
                 {
